--- a/front-end/src/scss/layout/_header.scss
+++ b/front-end/src/scss/layout/_header.scss
@@ -35,7 +35,7 @@ header {
             font-size: 14px;
             //padding: 10px 20px 10px 200px;
             padding: 10px 20px 10px 15px;
-            transition: all .35s 1.2s ease-in-out;
+            transition: all .333s .666s ease-in-out;
             position: relative;
             display: block;
             cursor: default;
@@ -64,9 +64,8 @@ header {
 
             .header-menu {
                 opacity: 0;
-                height: 0;
                 overflow: hidden;
-                transition: all .35s .5s ease-in-out;
+                transition: all .333s .333s ease-in-out;
 
                 background-color: $RGA-RED;
                 width: 293px;
@@ -75,7 +74,7 @@ header {
                 font-weight: normal;
                 top: 0;
                 left: 0;
-                min-height: 65px;
+                min-height: 64px;
             }
 
             .header-menu__item {
@@ -111,14 +110,55 @@ header {
                 padding-right: 30px;
             }
 
+            .header-menu__item-list {
+              opacity: 0;
+              transition: all .333s .333s ease-in-out;
+              margin: 0;
+              padding: 0;
+
+              > * {
+                height: 0;
+                opacity: 0;
+                transition: all .333s .333s ease-in-out, background 0s linear;
+                line-height: 2.25em;
+                padding: 0 2em;
+                background: none;
+                color: white;
+                display: block;
+                padding: 0 2em;
+                cursor: pointer;
+                width: 100%;
+                text-align: left;
+
+                &:hover, &.active {
+                    background: $RED-HOVER;
+                }
+
+                &.active {
+                  cursor: auto;
+                }
+              }
+            }
+
             &:hover {
                 padding-left: 200px;
-                transition: all .35s .5s ease-in-out;
+                transition: all .333s .333s ease-in-out;
 
                 .header-menu {
                     opacity: 1;
                     //min-height: 330px;
-                    transition: all .35s .5s ease-in-out;
+                    //transition: all .35s .5s ease-in-out;
+                }
+
+                .header-menu__item-list {
+                  opacity: 1;
+                  padding: 0 0 .75em 0;
+
+                  > * {
+                    height: 2.25em;
+                    line-height: 2.25em;
+                    opacity: 1;
+                  }
                 }
 
                 .resource-manager-menu {
